--- a/sample_menu_01.ui
+++ b/sample_menu_01.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>521</width>
-    <height>465</height>
+    <width>530</width>
+    <height>365</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>テーブルの行列を入れ替え</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
