--- a/sample_menu_01.ui
+++ b/sample_menu_01.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>530</width>
-    <height>365</height>
+    <height>360</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,15 +20,15 @@
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS UI Gothic'; font-size:13.5pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;CSVレイヤーの行列を入れ替えて出力します。選択したCSVの項目名が先頭列になります。&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS UI Gothic'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;選択したレイヤーの属性テーブルの行列を入れ替えて、ジオメトリなしのレイヤーを出力します。出力されたジオメトリなしのレイヤーは、出力前のレイヤーのフィールド名が先頭列の値になり、データ型はstringになります。&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>CSVレイヤーを選択</string>
+      <string>行列を入れ替るレイヤーを選択</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
@@ -59,6 +59,13 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item>
+    <widget class="QCheckBox" name="checkBox_2">
+     <property name="text">
+      <string>先頭列の値のUnicode正規化</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -74,7 +81,7 @@ p, li { white-space: pre-wrap; }
    <item>
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>先頭列以外の値の型の設定</string>
+      <string>先頭列以外の値のデータ型の設定</string>
      </property>
     </widget>
    </item>
@@ -95,6 +102,20 @@ p, li { white-space: pre-wrap; }
        <string>real（少数を含む数字）</string>
       </property>
      </item>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBox_3">
+     <property name="text">
+      <string>先頭列以外の値の空白を削除する</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBox_4">
+     <property name="text">
+      <string>先頭列以外の値のUnicode正規化</string>
+     </property>
     </widget>
    </item>
    <item>
